--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,32 +10,23 @@
   </head>
 
   <body>
-
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <%= link_to "BBQ!", root_path, class: 'navbar-brand' %>
-
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
-          </ul>    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <%= link_to "BBQ!", root_path, class: 'navbar-brand' %>
-
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
-          </ul>
-        </div>
+    <div class="container">
+      <%= link_to "BBQ!", root_path, class: 'navbar-brand' %>
+      <div class="navbar-collapse navbar-responsive-collapse">
+        <ul class="nav navbar-nav">
+          <% if user_signed_in? %>
+            <li><%= link_to 'Профиль', current_user %></li>
+            <li><%= link_to 'Выйти', destroy_user_session_path,
+                    method: :delete %></li>
+          <% else %>
+            <li><%= link_to 'Войти', new_user_session_path %></li>
+            <li><%= link_to 'Зарегистрироваться',
+                    new_user_registration_path %></li>
+          <% end %>
+        </ul>
       </div>
-    </div>
-        </div>
-      </div>
-    </div>
+
     <%= yield %>
+    </div>
   </body>
 </html>
