--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,4 +4,10 @@
   <div class="col-md-6 buffer-top">
     <%= render 'form' %>
   </div>
+
+  <p class="buffer-top">
+    <%= link_to 'Сменить пароль', edit_user_registration_path %>
+  </p>
+
+
 </div>
