--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,19 +11,21 @@
 
   <body>
     <div class="container">
-      <%= link_to "BBQ!", root_path, class: 'navbar-brand' %>
-      <div class="navbar-collapse navbar-responsive-collapse">
-        <ul class="nav navbar-nav">
-          <% if user_signed_in? %>
-            <li><%= link_to 'Профиль', current_user %></li>
-            <li><%= link_to 'Выйти', destroy_user_session_path,
-                    method: :delete %></li>
-          <% else %>
-            <li><%= link_to 'Войти', new_user_session_path %></li>
-            <li><%= link_to 'Зарегистрироваться',
-                    new_user_registration_path %></li>
-          <% end %>
-        </ul>
+      <div class="nowrap buffer-both">
+        <%= link_to "BBQ!", root_path, class: 'navbar-brand' %>
+        <div class="navbar-collapse navbar-responsive-collapse">
+          <ul class="nav wrapper-end">
+            <% if user_signed_in? %>
+              <li><%= link_to 'Профиль', current_user %></li>
+              <li><%= link_to 'Выйти', destroy_user_session_path,
+                      method: :delete, class: 'buffer-left' %></li>
+            <% else %>
+              <li><%= link_to 'Войти', new_user_session_path %></li>
+              <li><%= link_to 'Зарегистрироваться',
+                      new_user_registration_path, class: 'buffer-left' %></li>
+            <% end %>
+          </ul>
+        </div>
       </div>
 
     <%= yield %>
