refactoring devise views

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -22,7 +22,7 @@
     <%= f.text_area :description, class: 'form-control' %>
   </div>
 
-  <div class="actions">
+  <div class="actions buffer-both">
     <%= f.submit 'Сохранить', class: 'btn btn-primary' %>
     или <%= link_to 'вернуться', :back %>
   </div>
