--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2 class="buffer-both" >Регистрация</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal'}) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal col-6'}) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field form-group">
@@ -22,7 +22,7 @@
   </div>
 
   <div class="actions buffer-both">
-    <%= f.submit "Зарегестрироваться", class: 'btn btn-success'%>
+    <%= f.submit "Зарегистрироваться", class: 'btn btn-success'%>
   </div>
 <% end %>
 
