--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,18 @@
 
   <body>
     <div class="container">
-      <div class="nowrap buffer-both">
-        <%= link_to "BBQ!", root_path, class: 'navbar-brand' %>
-        <div class="navbar-collapse navbar-responsive-collapse">
-          <ul class="nav wrapper-end">
+      <div class="d-flex buffer-both">
+        <%= link_to "BBQ!", root_path, class: 'navbar-brand col-md-6' %>
+        <div class="col-6 col-md-6">
+          <ul class="nav d-flex justify-content-end">
             <% if user_signed_in? %>
-              <li><%= link_to 'Профиль', current_user %></li>
+              <li><%= link_to 'Профиль', current_user, class: 'text-decoration-none' %></li>
               <li><%= link_to 'Выйти', destroy_user_session_path,
-                      method: :delete, class: 'buffer-left' %></li>
+                      method: :delete, class: 'buffer-left nav-item text-decoration-none' %></li>
             <% else %>
-              <li><%= link_to 'Войти', new_user_session_path %></li>
+              <li><%= link_to 'Войти', new_user_session_path, class: 'text-decoration-none' %></li>
               <li><%= link_to 'Зарегистрироваться',
-                      new_user_registration_path, class: 'buffer-left' %></li>
+                      new_user_registration_path, class: 'buffer-left nav-item text-decoration-none' %></li>
             <% end %>
           </ul>
         </div>
