commiting Gemfile.lock

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,8 @@
  *= require_self
  */
 
-  Наши дополнительные стили для оформления отступов и тамбинашек картинок
-*/
+/* Наши дополнительные стили для оформления отступов и тамбинашек картинок */
+
 
 /* Buffers */
 .buffer-top {
