--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,7 +11,7 @@
     <%= f.text_field :email, class: 'form-control' %>
   </div>
 
-  <div class="actions">
+  <div class="actions buffer-both">
     <%= f.submit 'Сохранить', class: 'btn btn-primary' %>
     или <%= link_to 'вернуться', :back %>
   </div>
