--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <div class="d-flex buffer-both">
-        <%= link_to "BBQ!", root_path, class: 'navbar-brand col-md-6' %>
+      <%= link_to t('app.name'), root_path, class: 'navbar-brand' %>
         <div class="col-6 col-md-6">
           <ul class="nav d-flex justify-content-end">
             <% if user_signed_in? %>
@@ -30,6 +30,10 @@
       </div>
 
     <%= yield %>
+
+    <footer>
+      <p>&copy; <%= t('app.company') %> 2018</p>
+    </footer>
     </div>
   </body>
 </html>
