--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -13,7 +13,7 @@
         </div>
     <% end %>
 
-    <div class="actions">
+    <div class="actions buffer-top">
       <%= f.submit 'Отправить', class: 'btn btn-primary' %>
     </div>
 <% end %>
