--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,30 +1,29 @@
-<h2 class="buffer-both" >Регистрация</h2>
+<h2><%= t('.sign_up') %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal col-6'}) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field form-group">
+  <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field  :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
-  </div>
-
-  <div class="field form-group">
-    <%= f.label :Пароль %>
-    <% if @minimum_password_length %>
-    <em>(минимум <%= @minimum_password_length %> символов)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password", class: 'form-control'%>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
-    <%= f.label :Подтверждение_пароля %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+    <%= f.label :password %>
+    <% if @minimum_password_length %>
+    <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
+    <% end %><br />
+    <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
-  <div class="actions buffer-both">
-    <%= f.submit "Зарегистрироваться", class: 'btn btn-success'%>
+  <div class="field">
+    <%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  </div>
+
+  <div class="actions">
+    <%= f.submit t('.sign_up') %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
-
